Copied styles from `wiki.csst` to set a minimum height for textareas, improve alignment and fix size adjustment to vertical. Fixes #581.
git-svn-id: https://svn.apache.org/repos/asf/bloodhound/trunk@1499664 13f79535-47bb-0310-9956-ffa450edef68

--- a/bloodhound_theme/bhtheme/htdocs/bloodhound.css
+++ b/bloodhound_theme/bhtheme/htdocs/bloodhound.css
@@ -465,6 +465,12 @@ h1, h2, h3, h4 {
  padding: 0.8em 0px;
 }
 
+#edit, #text {
+ min-height: 10em;
+ padding: 0px;
+ resize: vertical;
+}
+
 /* @end */
 
 /* @group Search */
